@@ -21,6 +21,8 @@ BEGIN_C_DECLORATION
 Grid *gridCurvedEdgeMidpoint(Grid *,int node0, int node1, double *midpoint);
 
 double gridMinCellJacDet2(Grid *, int *nodes);
+Grid *gridMinCellJacDetDeriv2(Grid *, int *nodes,
+			      double *determinate, double *dDetdx);
 Grid *gridNodeMinCellJacDet2(Grid *, int node, double *determinate );
 
 Grid *gridPlotMinDeterminateAtSurface(Grid *);
